# mnist_reader

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
examples/inheritance/: CMakeLists.txt  inheritance.cpp
examples/instantiable/: CMakeLists.txt  instantiable.cpp
examples/static/: CMakeLists.txt  static.cpp
include/mnist_reader/: mnist_reader.hpp
include/system/: endianess.hpp
sources/: endianess.hpp  mnist_reader.cpp  mnist_reader.hpp
src/: CMakeLists.txt  endianess.cpp  mnist_reader.cpp
